# fip-website-analysis

./: main.py  pyproject.toml  tmp.html
notebooks/: scrape.ipynb
scrape/: campionati_regionali.json  campionati_regionali.py
scraped_website/group=campionati-regionali/regione_codice=AB/: links.json  mappings.json
scraped_website/group=campionati-regionali/regione_codice=BA/: links.json  mappings.json
scraped_website/group=campionati-regionali/regione_codice=CA/: links.json  mappings.json
scraped_website/group=campionati-regionali/regione_codice=CM/: links.json  mappings.json
scraped_website/group=campionati-regionali/regione_codice=EM/: links.json  mappings.json
scraped_website/group=campionati-regionali/regione_codice=FR/: links.json  mappings.json
scraped_website/group=campionati-regionali/regione_codice=LA/: links.json  mappings.json
scraped_website/group=campionati-regionali/regione_codice=LI/: links.json  mappings.json
scraped_website/group=campionati-regionali/regione_codice=LO/: links.json  mappings.json
scraped_website/group=campionati-regionali/regione_codice=MA/: links.json  mappings.json
scraped_website/group=campionati-regionali/regione_codice=MO/: links.json  mappings.json
scraped_website/group=campionati-regionali/regione_codice=PI/: links.json  mappings.json
scraped_website/group=campionati-regionali/regione_codice=PU/: links.json  mappings.json
scraped_website/group=campionati-regionali/regione_codice=SA/: links.json  mappings.json
scraped_website/group=campionati-regionali/regione_codice=SO/: links.json  mappings.json
(+8 files in other folders)
